<resources>
    <string name="app_name">Pinjam Aja! ADMIN</string>
    <string name="logo">logo admin</string>
    <string name="text_login_1">MASUK ADMIN</string>
    <string name="text_login_2">SILAHKAN LOGIN UNTUK MENGELOLA TRANSAKSI</string>
    <string name="button_login">LOGIN</string>
    <string name="textinputedit_email">Email</string>
    <string name="textinputedit_password">Password</string>
    <string name="version">Version 0.1.0</string>

    <string name="fund_request">Permintaan</string>
    <string name="fund_approval">Pendanaan</string>
    <string name="fund_return">Cicilan</string>
    <string name="fund_admin">Admin</string>
    <string name="pinjam_500k">Rp. 500.000,-</string>
    <string name="pinjam_1000k">Rp. 1.000.000,-</string>
    <string name="pinjam_1500k">Rp. 1.500.000,-</string>
</resources>
