<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg_grey"
    android:orientation="vertical"
    android:padding="25dp"
    android:theme="@style/AppTheme"
    tools:context=".MainLoginActivity">

    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="200dp"
        android:layout_height="170dp"
        android:layout_gravity="center"
        android:layout_marginTop="50sp"
        android:layout_marginBottom="10sp"
        android:contentDescription="@string/logo"
        android:src="@drawable/img_logo" />

    <TextView
        android:id="@+id/text_login_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/fira_sans_extrabold"
        android:text="@string/text_login_1"
        android:textAlignment="center"
        android:textColor="@color/text_tertier"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_login_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/fira_sans_bold_italic"
        android:paddingBottom="16dp"
        android:text="@string/text_login_2"
        android:textAlignment="center"
        android:textColor="@color/text_tertier"
        android:textSize="13sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textinputedit_email"
            app:boxStrokeColor="@color/text_tertier">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fira_sans"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textinputedit_password"
            app:boxStrokeColor="@color/text_tertier"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fira_sans"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_round_bg"
        android:fontFamily="@font/fira_sans_extrabold"
        android:onClick="onLoginButtonClick"
        android:text="@string/button_login"
        android:textSize="20sp" />

    <ProgressBar
        android:id="@+id/progress_bar_loading"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:indeterminate="false"/>

</LinearLayout>